--- a/src/components/pages/a-z-index.twig
+++ b/src/components/pages/a-z-index.twig
@@ -3,12 +3,12 @@
 </script>
 
 <div class="outer-pad outer-pad--top-level">
-  <div class="a-z-index-hero">
-    <div class="a-z-index-hero__breadcrumbs">
+  <div class="red-bkgrnd-hero">
+    <div class="red-bkgrnd-hero__breadcrumbs">
     {% include "@breadcrumb--top-level-pages" with hero.breadcrumbs %}
     </div>
-    <h1 class="a-z-index-hero__title">{{ hero.title }}</h1>
-    <div class="a-z-index-hero__message">{{ hero.message|raw }}</div>
+    <h1 class="red-bkgrnd-hero__title">{{ hero.title }}</h1>
+    <div class="red-bkgrnd-hero__message">{{ hero.message|raw }}</div>
   </div>
 
   <div class="a-z-index-letter-list">
