--- a/src/scss/_core/_variables.scss
+++ b/src/scss/_core/_variables.scss
@@ -6,11 +6,12 @@ $secondary: #4e7dab;
 $tertiary: #7ba3ca;
 $white: #ffffff;
 $off-white: #f5f5f5;
+$off-white2: #f3f3f3;
 $light-grey: #ebebeb;
 $iastate-dark-blue: #003d4c;
 $grey: #4a4a4a;
 $grey2: #e0e0e0;
-$off-white2: #f3f3f3;
+$grey3: #567078;
 $grey4: #707070;
 $black: #000000;
 $iastate-red: #c8102e;
