--- a/src/components/blockquote/_blockquote.scss
+++ b/src/components/blockquote/_blockquote.scss
@@ -3,6 +3,7 @@
   @include media-breakpoint-up(xl) {
     margin-top: rem(60);
     margin-bottom: rem(60);
+    margin-right: rem(-298);
     position: relative;
   }
   &:before {
@@ -103,6 +104,7 @@
     background-position: center center;
     background-size: rem(64) rem(52);
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='63.979' height='52'%3E%3Cg data-name='Group 416' fill='%23f1be48'%3E%3Cpath data-name='“' d='M27.043 52.001v-25h-16c-.4-10 4.8-15.8 16-17.8v-9.2c-17.6 1.4-27.8 12.8-27 30.2v21.8ZM63.979 52.001v-25h-16c-.4-10 4.8-15.8 16-17.8v-9.2c-17.6 1.4-27.8 12.8-27 30.2v21.8Z'/%3E%3C/g%3E%3C/svg%3E");
+    z-index: 1;
   }
   &:before {
     top: rem(-80);
