--- a/src/scss/_core/_layout.scss
+++ b/src/scss/_core/_layout.scss
@@ -10,7 +10,8 @@
 
 .outer-pad {
   @extend %outer-pad-x;
-  &.outer-pad--top-level {
+  &.outer-pad--top-level,
+  .top-level-page & {
     @include media-breakpoint-up(xl) {
       padding-left: rem(190);
       padding-right: rem(190);
