--- a/src/components/pages/admission-and-aid.twig
+++ b/src/components/pages/admission-and-aid.twig
@@ -65,21 +65,8 @@
     <div class="admission-aid-afford__intro-copy">{{ afford.intro|raw }}</div>
     {% include "@link-set" with afford.link_set %}
   </div>
-  <div class="admission-aid-afford__columns">
-    <ul>
-      {% for section in afford.sections %}
-      <li>
-        <div class="admission-aid-afford__media">
-          <img src="{{ section.icon|path }}" alt="" />
-        </div>
-        <div class="admission-aid-afford__section-content">
-          <h3 class="admission-aid-afford__section-title">{{ section.title }}</h3>
-          <div class="admission-aid-afford__section-description">{{ section.description|raw }}</div>
-          <a class="link-tertiary" href="{{ section.link.url }}">{{ section.link.title }}<span class="arrow"></span></a>
-        </div>
-      </li>
-      {% endfor %}
-    </ul>
+  <div class="paragraph-widget paragraph-widget--multicolumn-content">
+    {% include "@multi-column-content--alternative" with afford.columns %}
   </div>
 </div>
 
