--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -592,6 +592,12 @@
           }
         }
       }
+      &.site-header__parent-link-no-subnav-wrap {
+        @include media-breakpoint-up(xl) {
+          padding-right: rem(30);
+        }
+      }
+
       > a,
       > button {
         @extend %iastate22-button;
@@ -614,6 +620,11 @@
           @include media-breakpoint-up(xxl) {
             font-size: rem(16);
             line-height: (26 / 16);
+          }
+        }
+        &.site-header__parent-link-no-subnav {
+          &:after {
+            display: none;
           }
         }
 
@@ -829,6 +840,11 @@
       &:last-child {
         margin-bottom: 0;
         padding-right: 0;
+        &.site-header__parent-link-no-subnav-wrap {
+          @include media-breakpoint-up(xl) {
+            margin-right: rem(-20);
+          }
+        }
       }
       &:hover {
         opacity: 1;
