college home hero component progress

--- a/src/scss/_core/_variables.scss
+++ b/src/scss/_core/_variables.scss
@@ -13,6 +13,7 @@ $grey: #4a4a4a;
 $grey2: #e0e0e0;
 $grey3: #567078;
 $grey4: #707070;
+$grey-blue: #07333e;
 $black: #000000;
 $iastate-red: #c8102e;
 $iastate-maroon: #7c2529;
