--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -59,6 +59,7 @@
 @import "../components/callout-with-image/callout-with-image";
 @import "../components/callout-set/callout-set";
 @import "../components/home-announcement/home-announcement";
+@import "../components/college-home-hero/college-home-hero";
 @import "../components/privacy-consent/privacy-consent";
 
 // Pages
