--- a/src/components/pages/college-template.twig
+++ b/src/components/pages/college-template.twig
@@ -7,10 +7,19 @@
       <div class="college-hero__breadcrumbs">
         {% include "@breadcrumb--top-level-pages" with hero.breadcrumbs %}
       </div>
-      <div class="college-hero__media">
+      {# <div class="college-hero__media">
         <img class="college-hero__media-mobile" src="{{ hero.image_mobile|path }}" alt="" />
         <img class="college-hero__media-desktop" src="{{ hero.image_desktop|path }}" alt="" />
-      </div>
+      </div> #}
+      <div class="college-hero__media">
+  {% for image in hero.images %}
+    <picture>
+      <source media="(min-width: 768px)" data-srcset="{{ image.desktop.src|path }}">
+      <source data-srcset="{{ image.mobile.src|path }}">
+      <img data-src="{{ image.mobile.src|path }}" loading="lazy" alt="{{ hero.mobile.alt }}">
+    </picture>
+  {% endfor %}
+</div>
       <h1 class="college-hero__title">{{ hero.title }}</h1>
       <div class="college-hero__graphic">
         <svg viewBox="0 0 1120 680" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
