--- a/src/components/link-set/_link-set.scss
+++ b/src/components/link-set/_link-set.scss
@@ -17,10 +17,10 @@
 }
 
 .link-set__link {
-  &[class="link-set__link"][href*="//"]:not([href*="iastate.edu"]) {
-    color: $iastate-maroon;
-    font-family: $typeface-sans-serif;
-    font-weight: 700;
+  color: $iastate-maroon;
+  font-family: $typeface-sans-serif;
+  font-weight: 700;
+  &.iastate22-link-external {
     font-size: rem(18);
     text-decoration: none;
     line-height: (25 / 18);
@@ -40,7 +40,11 @@
     &:hover {
       text-decoration: underline;
     }
+    .arrow {
+      display: none;
+    }
   }
+
   &.iastate22-link-secondary,
   &.link-tertiary {
     margin: 0;
