--- a/src/components/pages/_additional-pages.scss
+++ b/src/components/pages/_additional-pages.scss
@@ -256,6 +256,7 @@
   background-color: $iastate-red;
   margin: 0 rem(-36);
   padding: rem(7) rem(36) rem(40);
+  position: relative;
   @include media-breakpoint-up(md) {
     margin-left: rem(-70);
     margin-right: rem(-70);
@@ -265,6 +266,19 @@
     margin-left: rem(-190);
     margin-right: rem(-190);
     padding: rem(30) rem(82) rem(60);
+  }
+  &:before {
+    @include media-breakpoint-up(xl) {
+      content: "";
+      position: absolute;
+      background-color: $iastate-red;
+      top: 0;
+      left: -50vw;
+      width: 150vw;
+      bottom: 0;
+      pointer-events: none;
+      z-index: -1;
+    }
   }
   .iastate22-breadcrumb__list {
     li {
@@ -315,6 +329,7 @@
   background-color: $off-white;
   margin: 0 rem(-36);
   padding: rem(19) rem(36) rem(14);
+  position: relative;
   @include media-breakpoint-up(md) {
     margin-left: rem(-70);
     margin-right: rem(-70);
@@ -324,6 +339,19 @@
     margin-left: rem(-190);
     margin-right: rem(-190);
     padding: rem(40) rem(70) rem(35);
+  }
+  &:before {
+    @include media-breakpoint-up(xl) {
+      content: "";
+      position: absolute;
+      background-color: $off-white;
+      top: 0;
+      left: -50vw;
+      width: 150vw;
+      bottom: 0;
+      pointer-events: none;
+      z-index: -1;
+    }
   }
   ul {
     display: flex;
