A-Z Index Hero Links https://bugify.idfive.com/issues/27632

--- a/src/components/pages/_additional-pages.scss
+++ b/src/components/pages/_additional-pages.scss
@@ -321,6 +321,9 @@
     color: $white;
     text-decoration-thickness: rem(1);
     text-underline-offset: rem(1);
+    &:hover {
+      color: $iastate-gold;
+    }
   }
 }
 
