College Template : In-Page-Nav https://bugify.idfive.com/issues/27643

--- a/src/components/pages/_college-template.scss
+++ b/src/components/pages/_college-template.scss
@@ -244,6 +244,7 @@
   @include media-breakpoint-up(lg) {
     width: 48%;
     margin-top: rem(-47);
+    padding: rem(48) rem(44);
   }
   @include media-breakpoint-up(xl) {
     width: 68%;
