Admission and Aid : Subnavigation Opened https://bugify.idfive.com/issues/27641

--- a/src/components/hero/_hero.scss
+++ b/src/components/hero/_hero.scss
@@ -69,6 +69,7 @@
     position: absolute;
     top: 0;
     right: rem(-70);
+    left: initial;
     max-width: rem(278);
   }
   @include media-breakpoint-up(xl) {
