--- a/src/components/pages/_admission-and-aid.scss
+++ b/src/components/pages/_admission-and-aid.scss
@@ -9,6 +9,7 @@
   .hero__subnav-wrap {
     margin-top: rem(-33);
     left: rem(36);
+    position: absolute;
     @include media-breakpoint-up(lg) {
       top: initial;
       right: initial;
@@ -17,6 +18,19 @@
     }
     @include media-breakpoint-up(xl) {
       left: rem(181);
+    }
+  }
+  .subnav--horizontal .subnav__list {
+    &:before {
+      @include media-breakpoint-up(lg) {
+        width: 100vw;
+        max-width: rem(1600);
+        left: rem(-36);
+        right: initial;
+      }
+      @include media-breakpoint-up(xl) {
+        left: rem(-181);
+      }
     }
   }
 }
