Admission and Aid : Apply CTA Button https://bugify.idfive.com/issues/27625

--- a/src/components/pages/_admission-and-aid.scss
+++ b/src/components/pages/_admission-and-aid.scss
@@ -510,6 +510,10 @@
               background-color: $iastate-gold;
             }
           }
+          &:hover {
+            color: $white;
+            background-color: $iastate-maroon;
+          }
         }
       }
     }
