--- a/src/scss/_core/_layout.scss
+++ b/src/scss/_core/_layout.scss
@@ -6,6 +6,9 @@
   max-width: rem(1600);
   margin: 0 auto;
   background-color: #fff;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
 .outer-pad {
@@ -25,6 +28,7 @@
 
 main {
   padding-top: rem(55);
+  flex: 1;
   @include media-breakpoint-up(xl) {
     padding-top: rem(117);
   }
