Revisit CTA Blocks at screen sizes less than 768px wide https://bugify.idfive.com/issues/27650

--- a/src/components/pages/_additional-pages.scss
+++ b/src/components/pages/_additional-pages.scss
@@ -245,7 +245,9 @@
     max-width: none;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    @include media-breakpoint-up(xl) {
+      justify-content: flex-end;
+    }
     @include media-breakpoint-up(xxl) {
       width: 70%;
     }
