updating documentation and read me files

--- a/src/scss/_core/_base.scss
+++ b/src/scss/_core/_base.scss
@@ -113,7 +113,7 @@ ol {
   }
 }
 
-// helper class to negate paragraph widgets for flush components
+// helper classes to negate paragraph widgets for flush components
 .paragraph-widget-no-margin-top {
   margin-top: 0 !important;
 }
