--- a/src/components/multi-column-content/multi-column-content--alternative.twig
+++ b/src/components/multi-column-content/multi-column-content--alternative.twig
@@ -1,9 +1,11 @@
 <div class="multi-column-content{% if columns|length < 3 %} multi-column-content-two-col{% endif %} multi-column-content--alternative">
   {% for column in columns %}
   <div class="multi-column-content__column">
+    {% if column.icon %}
     <div class="multi-column-content__column-media">
       <img src="{{ column.icon|path }}" alt="" />
     </div>
+    {% endif %}
     <div class="multi-column-content__column--content">
       <h3 class="multi-column-content__column--title">{{ column.title }}</h3>
       <div class="multi-column-content__column--description">{{ column.description|raw }}</div>
