--- a/src/components/college-home-hero/college-home-hero--supporting-image.twig
+++ b/src/components/college-home-hero/college-home-hero--supporting-image.twig
@@ -1,4 +1,4 @@
-<div class="college-home-hero--featured-image">
+<div class="college-home-hero--featured-image college-home-hero--supporting-image">
   <div class="college-home-hero--featured-image__media">
     <img src="{{ hero.image }}" alt="">
   </div>
