--- a/src/components/college-home-hero/college-home-hero--featured-image.twig
+++ b/src/components/college-home-hero/college-home-hero--featured-image.twig
@@ -4,6 +4,8 @@
   </div>
   <div class="college-home-hero__content">
     <h1 class="college-home-hero__title">{{ hero.title }}</h1>
-    {% include "@button-set" with hero.button_set %}
+    {% if hero.button_set %}
+      {% include "@button-set" with hero.button_set %}
+    {% endif %}
   </div>
 </div>
