--- a/src/components/college-home-hero/college-home-hero--background-video.twig
+++ b/src/components/college-home-hero/college-home-hero--background-video.twig
@@ -1,9 +1,12 @@
-<div class="college-home-hero--featured-image">
-  <div class="college-home-hero--featured-image__media">
+<div class="college-home-hero college-home-hero--background-video college-home-hero--featured-image">
+  <div class="college-home-hero__media">
     <img src="{{ hero.image }}" alt="">
+  <div class="college-home-hero__video" aria-label="YouTube Video: {{ title }}" data-vid="{{ hero.video_id }}"></div>
   </div>
-  <div class="college-home-hero--featured-image__content">
-    <h1 class="college-home-hero--featured-image__title">{{ hero.title }}</h1>
-    {% include "@button-set" with hero.button_set %}
+  <div class="college-home-hero__content">
+    <h1 class="college-home-hero__title">{{ hero.title }}</h1>
+    {% if hero.button_set %}
+      {% include "@button-set" with hero.button_set %}
+    {% endif %}
   </div>
 </div>
