--- a/src/components/ecosystem-home-hero/ecosystem-home-hero--supporting-image.twig
+++ b/src/components/ecosystem-home-hero/ecosystem-home-hero--supporting-image.twig
@@ -1,9 +1,9 @@
-<div class="ecosystem-home-hero--featured-image ecosystem-home-hero--supporting-image">
-  <div class="ecosystem-home-hero--featured-image__media">
-    <img src="{{ hero.image }}" alt="">
-  </div>
-  <div class="ecosystem-home-hero--featured-image__content">
-    <h1 class="ecosystem-home-hero--featured-image__title">{{ hero.title }}</h1>
+<div class="ecosystem-home-hero ecosystem-home-hero--supporting-image">
+  <div class="ecosystem-home-hero__content">
+    <h1 class="ecosystem-home-hero__title">{{ hero.title }}</h1>
     {% include "@button-set" with hero.button_set %}
+  </div>
+  <div class="ecosystem-home-hero__media">
+    <img src="{{ hero.image }}" alt="">
   </div>
 </div>
